--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,12 @@
         "symfony/http-foundation": "^3.3",
         "seld/jsonlint": "^1.6",
         "symfony/yaml": "^3.3",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "symfony/dependency-injection": "^3.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/App/"
+        }
     }
 }
